# introduction-to-fast-api

./: Dockerfile  Dockerfile.cloud  docker-compose.yaml  entrypoint.sh  migrate.sh  pyproject.toml  readme.md  test.py
api/: db.py  main.py  migrate_cloud_db.py  migrate_db.py
api/cruds/: done.py  task.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: done.py  task.py
tests/: test_main.py
